--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 	  
 	<properties>
         <aspectj.version>1.7.3</aspectj.version>
-		<slf4j.version>1.5.11</slf4j.version>
+		<slf4j.version>1.7.7</slf4j.version>
+        <logback.version>0.9.30</logback.version>
 		<jmock.version>2.6.0</jmock.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<main.basedir>${project.basedir}</main.basedir>
@@ -31,6 +32,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<cobertura.plugin.version>2.6</cobertura.plugin.version>
 		<cobertura.version>1.9.4.1</cobertura.version>
+        <tomcat-dbcp.version>6.0.41</tomcat-dbcp.version>
+        <postgresql.version>8.1-404.jdbc3</postgresql.version>
         <tomcat.version>6.0.20</tomcat.version>
         <tomcat.containerId>tomcat6x</tomcat.containerId>
         <tomcat.servletPort>7070</tomcat.servletPort>
@@ -46,6 +49,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>net.sourceforge.dynamicreports</groupId>
+                <artifactId>dynamicreports-core</artifactId>
+                <version>3.2.0</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.ws.commons.schema</groupId>
                 <artifactId>XmlSchema</artifactId>
@@ -185,7 +193,7 @@
 			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
-				<version>2.3</version>
+				<version>2.6</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-beanutils</groupId>
@@ -194,9 +202,10 @@
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
-				<groupId>commons-dbcp</groupId>
-				<artifactId>commons-dbcp</artifactId>
-				<version>1.4</version>
+                <groupId>org.apache.tomcat</groupId>
+                <artifactId>dbcp</artifactId>
+				<version>${tomcat-dbcp.version}</version>
+                <scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>commons-validator</groupId>
@@ -336,7 +345,7 @@
 			<dependency>
 				<groupId>postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>8.1-404.jdbc3</version>
+				<version>${postgresql.version}</version>
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
@@ -479,18 +488,18 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-core</artifactId>
-				<version>0.9.20</version>
+				<version>${logback.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>0.9.20</version>
+				<version>${logback.version}</version>
 			</dependency>
             <!-- Added the logback access-it will be needed to get the web application usage pattern data -->
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-access</artifactId>
-				<version>0.9.20</version>
+				<version>${logback.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>janino</groupId>
@@ -505,7 +514,7 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-validator</artifactId>
-				<version>4.0.2.GA</version>
+				<version>4.3.1.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -594,17 +603,6 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.2.4</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springmodules</groupId>
-                <artifactId>spring-modules-validation</artifactId>
-                <version>0.8a</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.springframework</groupId>
-                        <artifactId>spring</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 	    </dependencies>
     </dependencyManagement>
