Fixes #1812: Change "SAS dataset" by "SAS transport file" in the extract format options. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2203 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/extract.properties
+++ b/web/src/main/resources/extract.properties
@@ -250,9 +250,9 @@ extract.9.success=Your extract job completed successfully. The file is available
 extract.10.order=11
 extract.10.odmType=full
 extract.10.file=copyXML.xsl
-extract.10.fileDescription=SAS Dataset
+extract.10.fileDescription=SAS transport file
 extract.10.linkText=Run Now
-extract.10.helpText=SAS Dataset.
+extract.10.helpText=SAS transport file.
 extract.10.location=$exportFilePath/$datasetName/sas_dataset
 extract.10.exportname=odm1.3_full$datasetName_$dateTime.xml
 extract.10.success=The extract completed successfully. The file is available for download $linkURL.
