Add rest generated artefacts to ignore
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2324 14881f01-568e-124b-961a-bb94932aa8d1

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .DS_Store
 build.properties
+rest/target/
+rest/.project
+rest/.classpath
+rest/.settings/
 core/target/
 core/.project
 core/.classpath
