Fixes #1873: Implement the rest authentication service. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2325 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -33,6 +33,10 @@
 			<groupId>com.clinovo.clincapture</groupId>
 			<artifactId>medical-coding</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.clinovo.clincapture</groupId>
+			<artifactId>rest</artifactId>
+		</dependency>
         <dependency>
             <groupId>com.clinovo.clincapture</groupId>
             <artifactId>core</artifactId>
