--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <modules>
         <module>medical-coding</module>
         <module>core</module>
+		<module>rest</module>
         <module>web</module>
         <module>ws</module> 
     </modules>
@@ -79,6 +80,11 @@
                 <artifactId>medical-coding</artifactId>
                 <version>${project.version}</version>
             </dependency>
+			<dependency>
+				<groupId>com.clinovo.clincapture</groupId>
+				<artifactId>rest</artifactId>
+				<version>${project.version}</version>
+			</dependency>
             <dependency>
                 <groupId>com.clinovo.clincapture</groupId>
                 <artifactId>core</artifactId>
@@ -689,6 +695,10 @@
 							<property>
 								<name>net.sourceforge.cobertura.datafile</name>
 								<value>target/cobertura/cobertura.ser</value>
+							</property>
+							<property>
+								<name>test.core.build.classes</name>
+								<value>${project.parent.basedir}/core/target/classes</value>
 							</property>
 						</systemProperties>
 						<argLine>-Xms512m -Xmx512m -XX:MaxPermSize=512m -XX:MaxHeapSize=512m -XX:+HeapDumpOnOutOfMemoryError</argLine>
