--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -18,11 +18,6 @@
     </context-param>
 
     <context-param>
-        <param-name>jmesaMessagesLocation</param-name>
-        <param-value>org/akaza/openclinica/jmesaResourceBundle</param-value>
-    </context-param>
-
-    <context-param>
         <param-name>SQLInitServlet</param-name>
         <param-value>org/</param-value>
     </context-param>
@@ -129,6 +124,16 @@
     </filter-mapping>
 
     <servlet>
+        <servlet-name>rest</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>rest</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>pages</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>2</load-on-startup>
@@ -142,20 +147,6 @@
     <servlet-mapping>
         <servlet-name>pages</servlet-name>
         <url-pattern>/oauth/*</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>ws</servlet-name>
-        <servlet-class>org.springframework.ws.transport.http.MessageDispatcherServlet</servlet-class>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/ws-servlet-config.xml</param-value>
-        </init-param>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>ws</servlet-name>
-        <url-pattern>/ws/*</url-pattern>
     </servlet-mapping>
 
     <mime-mapping>
@@ -2046,4 +2037,5 @@
         <servlet-name>rules</servlet-name>
         <url-pattern>/rules</url-pattern>
     </servlet-mapping>
+
 </web-app>
