Fixes #1825: Ensure that even completely empty fields from CRF are present as columns in Excel extract. Submitted by hagafrank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2338 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/extract.properties
+++ b/web/src/main/resources/extract.properties
@@ -198,6 +198,7 @@ extract.6.linkText=Run Now
 extract.6.helpText=Generate a tabular view of your data as a HTML page.
 extract.6.location=$exportFilePath/$datasetName/HTML
 extract.6.exportname=HTML_$datasetName_$dateTime.html
+extract.6.skipBlanks=false
 #extract.6.zip=true
 #extract.6.deleteOld=true
 extract.6.success=Your extract job completed successfully. The file is available for download $linkURL.
@@ -211,6 +212,7 @@ extract.7.linkText=Run Now
 extract.7.helpText=Generate a tabular view of your data to be opened by Excel 1997-2003.
 extract.7.location=$exportFilePath/$datasetName/EXCEL
 extract.7.exportname=EXCEL_$datasetName_$dateTime.xls
+extract.7.skipBlanks=false
 #extract.7.zip=true
 #extract.7.deleteOld=true
 extract.7.success=Your extract job completed successfully. The file is available for download $linkURL.
@@ -224,6 +226,7 @@ extract.8.linkText=Run Now
 extract.8.helpText=Generate a tabular view of your data in a tab-delimited output.
 extract.8.location=$exportFilePath/$datasetName/TAB
 extract.8.exportname=TAB_$datasetName_$dateTime.tsv
+extract.8.skipBlanks=false
 #extract.8.zip=true
 #extract.8.deleteOld=true
 extract.8.success=Your extract job completed successfully. The file is available for download $linkURL.
@@ -241,6 +244,7 @@ extract.9.location=$exportFilePath/$datasetName/SPSS
 #   -or-
 # 2. change it manually inside the .sps output file 
 extract.9.exportname=SPSS_SPS.sps,SPSS_DAT.dat
+extract.9.skipBlanks=false
 extract.9.zipName=SPSS_$datasetName_$dateTime.spss
 #extract.9.zip=true
 #extract.9.deleteOld=true
@@ -265,6 +269,7 @@ extract.11.linkText=Run Now
 extract.11.helpText=Generate a tabular view of your data to be opened by Excel 2007-2013.
 extract.11.location=$exportFilePath/$datasetName/EXCEL13
 extract.11.exportname=EXCEL_$datasetName_$dateTime.xlsx
+extract.11.skipBlanks=false
 #extract.11.zip=true
 #extract.11.deleteOld=true
 extract.11.success=Your extract job completed successfully. The file is available for download $linkURL.
