Fixes #1926: When new entity is created then our plain jdbc DAO should return entity id using the Statement.RETURN_GENERATED_KEYS instead of using additional queries. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2433 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -266,7 +266,7 @@
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>8.1-404.jdbc3</version>
+			<version>${postgresql.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
