[2.1.0-release]: Add these files to exclusion during local modification check
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2450 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -733,9 +733,12 @@
 				    <checkModificationExcludes>
 				    	<checkModificationExclude>build.properties</checkModificationExclude>
 				    	<checkModificationExclude>medical-coding/test.log</checkModificationExclude>
+				    	<checkModificationExclude>web/openclinica-test.log</checkModificationExclude>
 				      	<checkModificationExclude>core/openclinica-test.log</checkModificationExclude>
 				      	<checkModificationExclude>core/Agent_Administration_v2.0_ssID1.pdf</checkModificationExclude>
-				      	<checkModificationExclude>web/openclinica-test.log</checkModificationExclude>
+						<checkModificationExclude>rest/src/test/resources/datainfo.properties</checkModificationExclude>
+						<checkModificationExclude>rest/src/test/resources/rest-test.properties</checkModificationExclude>
+						<checkModificationExclude>rest/src/test/resources/servlet-context.xml</checkModificationExclude>
 				    </checkModificationExcludes>
 				  </configuration>
 				</plugin>
