[2.1.0-release] I am not sure why maven is checking local mods on this on, adding it to exclusion for the moment
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2451 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -731,6 +731,7 @@
 				  <version>2.4.1</version>
 				  <configuration>
 				    <checkModificationExcludes>
+				    	<checkModificationExclude>rest/pom.xml</checkModificationExclude>
 				    	<checkModificationExclude>build.properties</checkModificationExclude>
 				    	<checkModificationExclude>medical-coding/test.log</checkModificationExclude>
 				    	<checkModificationExclude>web/openclinica-test.log</checkModificationExclude>
