--- a/pom.xml
+++ b/pom.xml
@@ -30,22 +30,18 @@
 		<spring.security.version>3.1.3.RELEASE</spring.security.version>
 		<config.file>src/main/resources/datainfo.properties</config.file>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<cobertura.plugin.version>2.6</cobertura.plugin.version>
-		<cobertura.version>1.9.4.1</cobertura.version>
         <tomcat-dbcp.version>6.0.41</tomcat-dbcp.version>
         <postgresql.version>8.4-701.jdbc3</postgresql.version>
-        <tomcat.version>6.0.20</tomcat.version>
-        <tomcat.containerId>tomcat6x</tomcat.containerId>
-        <tomcat.servletPort>7070</tomcat.servletPort>
-        <tomcat.ajpPort>7009</tomcat.ajpPort>
+		<junit.version>4.11</junit.version>
 	</properties>
-	
+
     <modules>
         <module>medical-coding</module>
         <module>core</module>
 		<module>rest</module>
         <module>web</module>
         <module>ws</module> 
+		<module>automated-regression-tests</module>
     </modules>
 
     <dependencyManagement>
@@ -84,7 +80,7 @@
 				<groupId>com.clinovo.clincapture</groupId>
 				<artifactId>rest</artifactId>
 				<version>${project.version}</version>
-			</dependency>
+            </dependency>
             <dependency>
                 <groupId>com.clinovo.clincapture</groupId>
                 <artifactId>core</artifactId>
@@ -372,7 +368,7 @@
 			<dependency>
 	            <groupId>junit</groupId>
 	            <artifactId>junit</artifactId>
-				<version>4.11</version>
+				<version>${junit.version}</version>
 	            <scope>test</scope>
 	        </dependency>
 		    <dependency>
@@ -614,35 +610,21 @@
     </dependencyManagement>
 	<build>
 		<pluginManagement>
-			<plugins>                
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>sql-maven-plugin</artifactId>
+					<version>1.5</version>
+				</plugin>
 				<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.4</version>                
+                    <version>1.4</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.cargo</groupId>
                     <artifactId>cargo-maven2-plugin</artifactId>                    
-                    <version>1.2.4</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>                    
-                    <artifactId>cobertura-maven-plugin</artifactId>
-                    <version>${cobertura.plugin.version}</version>
-                    <dependencies>
-                        <dependency>                            
-                        <groupId>net.sourceforge.cobertura</groupId>
-                            <artifactId>cobertura</artifactId>
-                            <version>${cobertura.version}
-                            </version>
-                        </dependency>                    
-                        </dependencies>
-                    <configuration>
-                        <formats>
-                            <format>xml</format>                            
-                            <format>html</format>
-                        </formats>
-                    </configuration>
+                    <version>1.4.11</version>
                 </plugin>
                 <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -692,10 +674,6 @@
 					<version>2.14.1</version>
 					<configuration>
 						<systemProperties>
-							<property>
-								<name>net.sourceforge.cobertura.datafile</name>
-								<value>target/cobertura/cobertura.ser</value>
-							</property>
 							<property>
 								<name>test.core.build.classes</name>
 								<value>${project.parent.basedir}/core/target/classes</value>
@@ -747,11 +725,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>2.6</version>
-				</plugin>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>exec-maven-plugin</artifactId>
-					<version>1.2.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -828,11 +801,6 @@
 	
     <reporting>
         <plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>${cobertura.plugin.version}</version>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
