--- a/web/pom.xml
+++ b/web/pom.xml
@@ -17,6 +17,17 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>2.44.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>servlet-api-2.5</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
@@ -54,23 +65,6 @@
 			<artifactId>saxon-dom</artifactId>
 			<version>8.7</version>
 		</dependency>
-		<dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server</artifactId>
-            <version>2.35.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>servlet-api-2.5</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-firefox-driver</artifactId>
-            <version>2.40.0</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
@@ -85,7 +79,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>rome</groupId>
 			<artifactId>rome-fetcher</artifactId>
@@ -378,266 +371,42 @@
 					</excludes>
 				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <goals>
-                    <goal>exec</goal>
-                </goals>
-                <configuration>
-                    <executable>mvn</executable>
-                    <arguments>
-                        <argument>-Dtest=**/selenium/TestStudyParameterEventLocationRequired</argument>
-                        <argument>clean</argument>
-                        <argument>install</argument>
-                        <argument>exec:exec</argument>
-                        <argument>-Pcobertura-test-report</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
 		</plugins>
 	</build>
 
 	<profiles>
 		<profile>
-            <id>cobertura-test-report</id>
-            <dependencies>
-                <dependency>
-                    <groupId>net.sourceforge.cobertura</groupId>
-                    <artifactId>cobertura</artifactId>
-                    <version>${cobertura.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.tomcat</groupId>
-                    <artifactId>dbcp</artifactId>
-                    <version>${tomcat-dbcp.version}</version>
-                    <scope>compile</scope>
-                </dependency>
-                <dependency>
-                    <groupId>postgresql</groupId>
-                    <artifactId>postgresql</artifactId>
-                    <version>${postgresql.version}</version>
-                </dependency>
-            </dependencies>
-            <build>
-                <finalName>web</finalName>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <configuration>
-                            <overwrite>true</overwrite>
-                            <outputDirectory>target/web/WEB-INF/classes</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>target/generated-classes/cobertura</directory>
-                                </resource>
-                            </resources>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>prepare-package-copy-resources</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>cobertura-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>pre-integration-test-instrument</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>instrument</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <tasks>
-                                <copy file="target/cargo/configurations/tomcat6x/cobertura.ser" tofile="target/cobertura/cobertura.ser" />
-                            </tasks>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>compile-copy</id>
-                                <phase>compile</phase>
-                                <configuration>
-                                    <tasks>
-                                        <copy file="../core/src/test/resources/test.properties" tofile="target/datainfo.properties" />
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>process-test-resources-copy</id>
-                                <phase>process-test-resources</phase>
-                                <configuration>
-                                    <tasks>
-                                        <copy file="src/test/resources/web-test.properties" tofile="target/test-classes/web-test.properties" />
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>integration-test-copy</id>
-                                <phase>integration-test</phase>
-                                <configuration>
-                                    <tasks>
-                                        <copy file="target/cobertura/cobertura.ser" tofile="target/cargo/configurations/tomcat6x/cobertura.ser" />
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>post-integration-test-copy</id>
-                                <phase>pre-integration-test</phase>
-                                <configuration>
-                                    <tasks>
-                                        <copy file="../core/src/test/resources/test.properties" tofile="target/datainfo.properties" />
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <configuration>
-                            <webResources>
-                                <resource>
-                                    <directory>src/main/webapp</directory>
-                                    <filtering>true</filtering>
-                                    <excludes>
-                                        <exclude>**/*.jsp</exclude>
-                                    </excludes>
-                                </resource>
-                                <resource>
-                                    <filtering>true</filtering>
-                                    <directory>target</directory>
-                                    <targetPath>WEB-INF/classes</targetPath>
-                                    <includes>
-                                        <include>datainfo.properties</include>
-                                    </includes>
-                                </resource>
-                            </webResources>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <configuration>
-                            <container>
-                                <containerId>${tomcat.containerId}</containerId>
-                                <artifactInstaller>
-                                    <groupId>org.apache.juddi.bootstrap</groupId>
-                                    <artifactId>apache-tomcat</artifactId>
-                                    <version>${tomcat.version}</version>
-                                </artifactInstaller>
-                            </container>
-                            <configuration>
-                                <properties>
-                                    <cargo.servlet.port>${tomcat.servletPort}</cargo.servlet.port>
-                                    <cargo.tomcat.ajp.port>${tomcat.ajpPort}</cargo.tomcat.ajp.port>
-                                </properties>
-                            </configuration>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>start-server</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>start</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>stop-server</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>stop</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <phase>integration-test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration>
-                                    <skip>false</skip>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>mvn</executable>
-                            <arguments>
-                                <argument>-DskipTests=true</argument>
-                                <argument>antrun:run</argument>
-                                <argument>cobertura:cobertura</argument>
-                                <argument>-Pcobertura-test-report</argument>
-                            </arguments>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-		</profile>
-		<profile>
-			<id>run-sauce-tests</id>
+			<id>run-regression-tests</id>
 			<activation>
 				<property>
-					<name>test</name>
-					<value>**/saucelabs/*</value>
+					<name>runRegressionTests</name>
+					<value>true</value>
 				</property>
 			</activation>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
+						<artifactId>maven-war-plugin</artifactId>
 						<configuration>
-							<skipTests>false</skipTests>
-							<excludes>
-								<exclude>**/selenium/*</exclude>
-							</excludes>
+							<webResources>
+								<resource>
+									<directory>src/main/webapp</directory>
+									<filtering>true</filtering>
+									<excludes>
+										<exclude>**/*.jsp</exclude>
+									</excludes>
+								</resource>
+								<resource>
+									<filtering>true</filtering>
+									<directory>../automated-regression-tests/src/test/resources</directory>
+									<targetPath>WEB-INF/classes</targetPath>
+									<includes>
+										<include>datainfo.properties</include>
+									</includes>
+								</resource>
+							</webResources>
 						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>properties-maven-plugin</artifactId>
 					</plugin>
 				</plugins>
 			</build>
@@ -654,10 +423,6 @@
 				<finalName>clincapture</finalName>
 				<plugins>
 					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>properties-maven-plugin</artifactId>
-					</plugin>
-					<plugin>
 						<groupId>org.codehaus.cargo</groupId>
 						<artifactId>cargo-maven2-plugin</artifactId>
 						<configuration>
@@ -670,14 +435,6 @@
 								<type>existing</type>
 							</configuration>
 						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-war-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
 					</plugin>
 				</plugins>
 			</build>
