Fixes #2006: DCF: Improve displayed information. Submitted by Frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2465 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -606,6 +606,11 @@
                 <artifactId>gson</artifactId>
                 <version>2.2.4</version>
             </dependency>
+            <dependency>
+            	<groupId>net.sf.jasperreports</groupId>
+            	<artifactId>jasperreports-fonts</artifactId>
+            	<version>6.0.0</version>
+            </dependency>
 	    </dependencies>
     </dependencyManagement>
 	<build>
