--- a/core/pom.xml
+++ b/core/pom.xml
@@ -335,6 +335,11 @@
 			<artifactId>json</artifactId>
 			<version>20090211</version>
 		</dependency>
+
+            <dependency>
+            	<groupId>net.sf.jasperreports</groupId>
+            	<artifactId>jasperreports-fonts</artifactId>
+            </dependency>
 	</dependencies>
 
 	<build>
