Adds automated-regression-test generated artefacts to ignore
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2501 14881f01-568e-124b-961a-bb94932aa8d1

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ medical-coding/.settings/
 medical-coding/.classpath
 medical-coding/test.log
 core/Agent_Administration_v2.0_ssID1.pdf
+automated-regression-tests/target/
