Rollback #2033, as we need to cut trunk first
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2592 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -438,6 +438,11 @@
         <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>editUserAccountServlet</servlet-name>
+        <display-name>EditUserAccount</display-name>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>listUserAccountsServlet</servlet-name>
         <display-name>ListUserAccounts</display-name>
         <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
@@ -1442,6 +1447,10 @@
     <servlet-mapping>
         <servlet-name>createUserAccountServlet</servlet-name>
         <url-pattern>/CreateUserAccount</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>editUserAccountServlet</servlet-name>
+        <url-pattern>/EditUserAccount</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>createStudyServlet</servlet-name>
