Fixes #2109: UWHOD postgres migration. Submitted by Vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2593 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -702,7 +702,7 @@
 							</goals>
 							<configuration>
 								<files>
-									<file>${main.basedir}/build.properties</file>
+									<file>${project.parent.basedir}/build.properties</file>
 								</files>
 							</configuration>
 						</execution>
