Add the automated-regression-tests generated eclipse project files to ignore.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2599 14881f01-568e-124b-961a-bb94932aa8d1

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,31 @@
 .DS_Store
-build.properties
-rest/target/
-rest/.project
-rest/.classpath
-rest/.settings/
 rest/bin/
-core/target/
-core/.project
-core/.classpath
-core/.settings/
-core/openclinica-test.log
-web/openclinica-test.log
-web/target/
-web/.project
-web/.settings/
-web/.classpath
 ws/target/
 ws/.project
 ws/.settings/
 ws/.classpath
-ws-cabig/target/
-ws-cabig/.project
-ws-cabig/.settings/
-ws-cabig/.classpath
+rest/target/
+rest/.project
+rest/.classpath
+rest/.settings/
+core/target/
+core/.project
+core/.classpath
+core/.settings/
+web/target/
+web/.project
+web/.settings/
+web/.classpath
+build.properties
 medical-coding/target
 medical-coding/.project
-medical-coding/.settings/
-medical-coding/.classpath
 medical-coding/test.log
-core/Agent_Administration_v2.0_ssID1.pdf
+web/openclinica-test.log
+medical-coding/.settings
+medical-coding/.classpath
+core/openclinica-test.log
 automated-regression-tests/target/
+automated-regression-tests/.classpath
+automated-regression-tests/.project
+automated-regression-tests/.settings/
+core/Agent_Administration_v2.0_ssID1.pdf
