--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<main.basedir>${project.basedir}</main.basedir>
 		<build.revision>Rev: ${SVN_REVISION}</build.revision>
+		<build.buildId>${BUILD_ID}</build.buildId>
 		<scm.path>https://svn.clinovo.com/clincapture/trunk</scm.path>
 		<spring.security.version>3.1.3.RELEASE</spring.security.version>
 		<config.file>src/main/resources/datainfo.properties</config.file>
