--- a/web/pom.xml
+++ b/web/pom.xml
@@ -339,7 +339,7 @@
 							<manifestEntries>
 								<Specification-Title>${project.name}</Specification-Title>
 								<Specification-Version>${project.version}</Specification-Version>
-								<Build-Id>${BUILD_ID}</Build-Id>
+								<Build-Id>${build.buildId}</Build-Id>
 								<Implementation-Version>${BUILD_TAG}</Implementation-Version>
 								<Published-Version>${published.version}</Published-Version>
 							</manifestEntries>
