--- a/pom.xml
+++ b/pom.xml
@@ -623,6 +623,16 @@
 				<artifactId>json</artifactId>
 				<version>20090211</version>
 			</dependency>
+			<dependency>
+				<groupId>org.jvnet.ws.wadl</groupId>
+				<artifactId>wadl-core</artifactId>
+				<version>1.1.6</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jvnet.ws.wadl</groupId>
+				<artifactId>wadl-client-plugin</artifactId>
+				<version>1.1.6</version>
+			</dependency>
 	    </dependencies>
     </dependencyManagement>
 	<build>
