Fixed #1796: Event API: Create Event Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2762 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -122,6 +122,14 @@
         <filter-name>logFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>restFilter</filter-name>
+        <filter-class>com.clinovo.rest.filter.RestFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>restFilter</filter-name>
+        <url-pattern>/rest/*</url-pattern>
+    </filter-mapping>
 
     <servlet>
         <servlet-name>rest</servlet-name>
