--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ web/target/
 web/.project
 web/.settings/
 web/.classpath
+commons/target/
 build.properties
 medical-coding/target
 medical-coding/.project
