Fixes #1801: Event API for Remove_Event/Restore_Event. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2912 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -133,7 +133,7 @@
 
     <servlet>
         <servlet-name>rest</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <servlet-class>com.clinovo.rest.dispatcher.RestDispatcherServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
