--- a/web/pom.xml
+++ b/web/pom.xml
@@ -61,13 +61,8 @@
         </dependency>
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
-			<artifactId>saxon</artifactId>
-			<version>8.7</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.saxon</groupId>
-			<artifactId>saxon-dom</artifactId>
-			<version>8.7</version>
+			<artifactId>Saxon-HE</artifactId>
+			<version>9.6.0-6</version>
 		</dependency>
         <dependency>
 			<groupId>org.apache.httpcomponents</groupId>
