Fixes #2551: Improve test coverage of the "crf-lib" module. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3090 14881f01-568e-124b-961a-bb94932aa8d1

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>commons</artifactId>
     <packaging>jar</packaging>
-    <name>ClinCapture Validation</name>
+    <name>ClinCapture Commons</name>
 
     <dependencies>
         <dependency>
