Add new project files to ignore.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3152 14881f01-568e-124b-961a-bb94932aa8d1

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 .DS_Store
 rest/bin/
+.metadata/
 ws/target/
 ws/.project
 ws/.settings/
 ws/.classpath
+commons/.classpath
+commons/.project
+commons/.settings/
+crf-lib/.classpath
+crf-lib/.project
+crf-lib/.settings/
+crf-lib/target/
 rest/target/
 rest/.project
 rest/.classpath
@@ -19,6 +27,7 @@ web/.classpath
 commons/target/
 build.properties
 medical-coding/target
+RemoteSystemsTempFiles/
 medical-coding/.project
 medical-coding/test.log
 web/openclinica-test.log
