Fixes #2557: Update Automation Test which affects Evaluation on System page. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3168 14881f01-568e-124b-961a-bb94932aa8d1

--- a/automated-regression-tests/pom.xml
+++ b/automated-regression-tests/pom.xml
@@ -93,6 +93,14 @@
     </dependencies>
 
     <build>
+    	<testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <excludes>
+                    <exclude>**/Preconditions.story</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
