--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.clinovo.clincapture</groupId>
         <artifactId>clincapture</artifactId>
-        <version>2.1.20-SNAPSHOT</version>
+        <version>2.1.20</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
