Fixed #2589: Fix import/export partial saved data. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3183 14881f01-568e-124b-961a-bb94932aa8d1

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -16,6 +16,18 @@
         <dependency>
             <groupId>com.clinovo.clincapture</groupId>
             <artifactId>core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.clinovo.clincapture</groupId>
+            <artifactId>core</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
