Fixed #2784: Add ability to run different test suites depending on command. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3388 14881f01-568e-124b-961a-bb94932aa8d1

--- a/automated-regression-tests/pom.xml
+++ b/automated-regression-tests/pom.xml
@@ -49,6 +49,10 @@
             <artifactId>thucydides-core</artifactId>
             <version>${thucydides.version}</version>
         </dependency>
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.jbehave</groupId>
             <artifactId>jbehave-core</artifactId>
@@ -64,6 +68,10 @@
             <artifactId>thucydides-jbehave-plugin</artifactId>
             <version>${thucydides.version}</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>dbcp</artifactId>
+		</dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -90,6 +98,10 @@
             <version>${junit.version}</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+		</dependency>
     </dependencies>
 
     <build>
@@ -112,6 +124,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+					<systemProperties>
+						<property>
+							<name>testSuite</name>
+							<value>${testSuite}</value>
+						</property>
+					</systemProperties>
                     <skip>true</skip>
                 </configuration>
             </plugin>
