--- a/automated-regression-tests/src/test/resources/datainfo.properties
+++ b/automated-regression-tests/src/test/resources/datainfo.properties
@@ -62,3 +62,6 @@ syslog.port=514
 collectStats=true
 usage.stats.host=localhost
 usage.stats.port=514
+
+driver=org.postgresql.Driver
+url=jdbc:postgresql://localhost:5432/
