--- a/pom.xml
+++ b/pom.xml
@@ -646,6 +646,11 @@
 			<plugins>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>truezip-maven-plugin</artifactId>
+					<version>1.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>sql-maven-plugin</artifactId>
 					<version>1.5</version>
 				</plugin>
