Fixed #2754: Unable to save CRF because date is empty but not editable. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3420 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/extract.properties
+++ b/web/src/main/resources/extract.properties
@@ -288,9 +288,9 @@ extract.11.success=Your extract job completed successfully. The file is availabl
 extract.12.order=12
 extract.12.odmType=clinical_data
 extract.12.file=ODMToCSV.xsl
-extract.12.fileDescription=Coma Separated Values (.csv)
+extract.12.fileDescription=Comma Separated Values (.csv)
 extract.12.linkText=Run Now
-extract.12.helpText=Generate a coma separated view of your data.
+extract.12.helpText=Generate a comma separated view of your data.
 extract.12.location=$exportFilePath/$datasetName/CSV
 extract.12.exportname=CSV_$datasetName_$dateTime.csv
 extract.12.skipBlanks=false
