Fixed #2849: Servlet-api should not be available in core module. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3522 14881f01-568e-124b-961a-bb94932aa8d1

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>commons</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jvnet.ws.wadl</groupId>
             <artifactId>wadl-core</artifactId>
         </dependency>
