Fixed #2970: Logging provider is not set correctly for jboss-logging. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3585 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -943,6 +943,10 @@
 					<configuration>
 						<systemProperties>
 							<property>
+								<name>org.jboss.logging.provider</name>
+								<value>slf4j</value>
+							</property>
+							<property>
 								<name>test.core.build.classes</name>
 								<value>${project.parent.basedir}/core/target/classes</value>
 							</property>
